--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Outfit", sans-serif;
 }
 
 a {
@@ -13,6 +13,7 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: "Outfit", sans-serif;
 }
 .accordion-button:not(.collapsed) {
   color: #000000 !important;
@@ -21,4 +22,26 @@ a {
 
 .accordion-button:focus {
   box-shadow: none !important;
+}
+.cardBtn {
+  position: absolute;
+  left: 92%;
+  top: 0;
+  background: gray;
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  box-shadow: 0px 3px 5px 0.1px rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+  transform: scale(0);
+  transition: all 0.6s 0.2s ease;
+}
+
+.card:hover .cardBtn {
+  transform: scale(1);
+  visibility: visible;
 }
